# CNum

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  Makefile  Readme.md
cmake/: CNumConfig.cmake.in
docs/: Activation_8h.html  Activation_8h.js  Activation_8h_source.html  Arena_8h.html  Arena_8h.js  Arena_8h_source.html  BinaryMask_8h.html  BinaryMask_8h.js  BinaryMask_8h_source.html  BinaryMask_8tpp.html  BinaryMask_8tpp_source.html  CNum_8h.html  CNum_8h_source.html  ConcurrentQueue_8h.html  ConcurrentQueue_8h.js  ConcurrentQueue_8h_source.html  ConcurrentQueue_8tpp.html  ConcurrentQueue_8tpp_source.html  DataStructsDefs_8h.html  DataStructsDefs_8h.js  DataStructsDefs_8h_source.html  DataStructs_8h.html  DataStructs_8h.js  DataStructs_8h_source.html  Data_8h.html  Data_8h.js  Data_8h_source.html  Deploy_8h.html  Deploy_8h.js  Deploy_8h_source.html  Deploy_8tpp.html  Deploy_8tpp_source.html  GBModel_8h.html  GBModel_8h.js  GBModel_8h_source.html  GBModel_8tpp.html  GBModel_8tpp_source.html  HazardPointer_8h.html  HazardPointer_8h.js  HazardPointer_8h_source.html  (+353 more)
docs/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  defines_0.js  (+95 more)
include/: CNum.h
include/CNum/: Deploy.h
include/CNum/Data/: Data.h
include/CNum/DataStructs/: ConcurrentQueue.h  ConcurrentQueue.tpp  DataStructs.h  DataStructsDefs.h
include/CNum/DataStructs/Matrix/: BinaryMask.h  BinaryMask.tpp  IndexMask.h  IndexMask.tpp  LinAlg.h  Mask.h  Mask.tpp  Matrix.h  Matrix.tpp
include/CNum/DataStructs/Memory/: Arena.h  HazardPointer.h  HazardPointer.tpp
include/CNum/DataStructs/Views/: StrideIterator.tpp  StrideView.h  StrideView.tpp  Views.h
include/CNum/Deploy/: Deploy.h  Deploy.tpp
include/CNum/Model/: Activation.h  Loss.h  Model.h  ModelPool.h  ModelPool.tpp
include/CNum/Model/Tree/: GBModel.h  GBModel.tpp  Tree.h  TreeBooster.h  TreeBoosterNode.h  TreeDefs.h  XGTreeBooster.h
include/CNum/Multithreading/: Multithreading.h  ThreadPool.h
include/CNum/Utils/: ModelUtils.h  RandUtils.h  RandUtils.tpp  Utils.h
src/: CMakeLists.txt
src/Data/: CMakeLists.txt  data.cpp
src/DataStructs/: CMakeLists.txt
src/DataStructs/Matrix/: CMakeLists.txt  binary_mask.cpp  index_mask.cpp  lin_alg.cpp
src/DataStructs/Memory/: Arena.c  CMakeLists.txt  HazardPointer.cpp  arena.c  hazard_pointer.cpp
src/Model/: Activation.cpp  CMakeLists.txt  Loss.cpp  activation.cpp  loss.cpp
src/Model/Tree/: CMakeLists.txt  TreeBooster.cpp  TreeBoosterNode.cpp  XGTreeBooster.cpp  tree_booster.cpp  tree_booster_node.cpp  xg_tree_booster.cpp
src/Multithreading/: CMakeLists.txt  ThreadPool.cpp  thread_pool.cpp
src/Utils/: CMakeLists.txt  model_utils.cpp  rand_utils.cpp
tests/: CMakeLists.txt  test.cpp
